--- a/css/newsletter.css
+++ b/css/newsletter.css
@@ -89,3 +89,18 @@
   }
 }
 
+  
+  /* Media queries */
+  @media only screen and (max-width: 768px) {
+    #mc_embed_signup form {
+      max-width: 90%;
+    }
+  }
+  
+  @media only screen and (max-width: 480px) {
+    #mc_embed_signup form {
+      max-width: 100%;
+      padding: 0 10px;
+    }
+  }
+  
